--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -41,6 +41,7 @@
     "express": "^4.17.1",
     "graphql": "^15.8.0",
     "graphql-scalars": "^1.14.1",
+    "jsonwebtoken": "^8.5.1",
     "logger": "*",
     "morgan": "^1.10.0",
     "nexus": "^1.1.0",
