--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "lib": ["ES2015"],
-    "module": "CommonJS",
+    "target": "ES2018",
+    "module": "commonjs",
+    "lib": ["esnext"],
+    "strict": true,
     "outDir": "./dist",
     "rootDir": "./src",
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "sourceMap": true
   },
   "exclude": ["node_modules"],
   "extends": "tsconfig/base.json",
