--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@hookform/resolvers": "^2.8.5",
+    "apollo-hooks": "*",
     "next": "12.0.7",
+    "next-auth": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
     "ui": "*",
-    "apollo-hooks": "*",
     "yup": "^0.32.11"
   },
   "devDependencies": {
