--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --port 4000",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
@@ -11,12 +11,15 @@
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@hookform/resolvers": "^2.8.5",
+    "add": "^2.0.6",
+    "apollo-hooks": "*",
     "next": "12.0.7",
+    "next-auth": "^4.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.24.0",
     "ui": "*",
-    "apollo-hooks": "*",
+    "yarn": "^1.22.17",
     "yup": "^0.32.11"
   },
   "devDependencies": {
