add image to create project setup, fix sending token in ssr, project page

--- a/packages/apollo-hooks/codegen.yml
+++ b/packages/apollo-hooks/codegen.yml
@@ -2,8 +2,7 @@ overwrite: true
 schema: '../../apps/api/src/prisma/schema.graphql'
 generates:
   generated/index.tsx:
-    documents:
-      ['../../apps/web/src/**/*.graphql', '../../apps/adming/src/**/*.graphql']
+    documents: ['../../apps/web/**/*.graphql', '../../apps/admin/**/*.graphql']
     plugins:
       - 'typescript'
       - 'typescript-operations'
