--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,6 +16,7 @@
     "next-auth": "^4.1.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-dropzone": "^11.5.3",
     "react-hook-form": "^7.24.0",
     "ui": "*",
     "yup": "^0.32.11"
