add build for apollo hooks

--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "scripts": {
     "build": "turbo run build",
     "build:web": "turbo run build --scope=web",
+    "build:hooks": "turbo run build --scope=apollo-hooks",
     "dev": "turbo run dev --parallel",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
