--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -7,7 +7,9 @@
     "eslint-preset.js"
   ],
   "dependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
     "eslint-config-next": "^12.0.7",
     "eslint-config-prettier": "^8.3.0"
-  }
+  },
+  "devDependencies": {}
 }
