--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "apollo-hooks": "*",
     "next": "12.0.7",
     "next-auth": "^4.1.0",
+    "next-seo": "^5.0.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.5.3",
