--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -6,11 +6,13 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "generate": "plop"
   },
   "dependencies": {
     "@apollo/client": "^3.5.7",
     "@hookform/resolvers": "^2.8.5",
+    "@stitches/react": "^1.2.6",
     "apollo-hooks": "*",
     "next": "12.0.7",
     "next-auth": "^4.1.0",
@@ -27,6 +29,7 @@
     "config": "*",
     "eslint": "7.32.0",
     "next-transpile-modules": "9.0.0",
+    "plop": "^3.0.5",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
