--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
+    "@svgr/webpack": "^6.2.1",
     "@types/react": "17.0.37",
     "config": "*",
     "eslint": "7.32.0",
