--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -18,18 +18,21 @@
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
   },
   "devDependencies": {
+    "@types/jest": "^26.0.22",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
-    "react": "^17.0.2",
-    "tsconfig": "*",
-    "@types/jest": "^26.0.22",
-    "scripts": "*",
-    "jest": "^26.6.3",
     "eslint": "^7.32.0",
+    "jest": "^26.6.3",
+    "react": "^17.0.2",
+    "scripts": "*",
+    "tsconfig": "*",
     "tsup": "^5.10.1",
     "typescript": "^4.5.3"
   },
   "jest": {
     "preset": "scripts/jest/node"
+  },
+  "dependencies": {
+    "@stitches/react": "^1.2.6"
   }
 }
