use stitches config, project card hover

--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -12,7 +12,8 @@
       "@/pages/*": ["src/pages/*"],
       "@/graphql/*": ["src/graphql/*"],
       "@/store/*": ["store/*"],
-      "@/types/*": ["src/types/*"]
+      "@/types/*": ["src/types/*"],
+      "@/stitches/*": ["stitches/*"]
     }
   }
 }
