--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -15,14 +15,17 @@
     "build": "tsup index.tsx --format esm,cjs --dts --external react",
     "dev": "tsup index.tsx --format esm,cjs --watch --dts --external react",
     "lint": "TIMING=1 eslint --fix",
-    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist"
+    "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
+    "generate": "plop"
   },
   "devDependencies": {
     "@types/jest": "^26.0.22",
     "@types/react": "^17.0.13",
     "@types/react-dom": "^17.0.8",
+    "@types/react-modal": "^3.13.1",
     "eslint": "^7.32.0",
     "jest": "^26.6.3",
+    "plop": "^3.0.5",
     "react": "^17.0.2",
     "scripts": "*",
     "tsconfig": "*",
@@ -33,6 +36,8 @@
     "preset": "scripts/jest/node"
   },
   "dependencies": {
-    "@stitches/react": "^1.2.6"
+    "@stitches/react": "^1.2.6",
+    "classnames": "^2.3.1",
+    "react-modal": "^3.14.4"
   }
 }
