--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,8 @@
     "@hookform/resolvers": "^2.8.5",
     "@stitches/react": "^1.2.6",
     "apollo-hooks": "*",
+    "deepmerge": "^4.2.2",
+    "lodash-es": "^4.17.21",
     "next": "12.0.7",
     "next-auth": "^4.1.0",
     "next-seo": "^5.0.0",
