--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -4,12 +4,14 @@
   "main": "index.js",
   "license": "MIT",
   "files": [
-    "eslint-preset.js"
+    "eslint-preset.js",
+    "prettier-preset.js"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "eslint-config-next": "^12.0.7",
-    "eslint-config-prettier": "^8.3.0"
+    "eslint-config-prettier": "^8.3.0",
+    "prettier": "2.5.1"
   },
   "devDependencies": {}
 }
