--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -42,6 +42,7 @@
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "graphql": "^16.3.0",
     "graphql-scalars": "^1.14.1",
     "jsonwebtoken": "^8.5.1",
     "logger": "*",
