--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,14 +1,23 @@
-name: learn-github-actions
-on: [push]
+name: Check type
+
+on:
+  push:
+    branches: [$default-branch]
+  pull_request:
+    branches: [$default-branch]
+
 jobs:
-  check-bats-version:
+  build:
     runs-on: ubuntu-latest
+
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v2
         with:
           node-version: '14'
+
       - run: npm install -g yarn
-      run: |
-      yarn 
-      yarn tsc:web
+      - name: yarn install
+        run: |
+          yarn 
+          yarn tsc:web
