add follow users fields to db, migrations, initial work on ui

--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "build": "turbo run build",
     "build:web": "turbo run build --scope=web",
     "tsc:web": "cd apps/web && yarn tsc",
-    "build:hooks": "turbo run build --scope=apollo-hooks",
+    "build:hooks": "cd packages/apollo-hooks && yarn build",
+    "generate:hooks": "cd packages/apollo-hooks && yarn generate",
+    "update:hooks": "yarn generate:hooks && yarn build:hooks",
     "dev": "turbo run dev --parallel",
     "dev:web": "turbo run dev --scope=web",
     "dev:api": "turbo run dev --scope=api",
