optimistic response for follow user, change name of app in fly.toml

--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -1,6 +1,6 @@
 # fly.toml file generated for project-shelf on 2022-01-23T18:54:21+09:00
 
-app = "project-shelf"
+app = "project-shelf-dev"
 
 kill_signal = "SIGINT"
 kill_timeout = 5
