--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,7 +13,7 @@
     "@hookform/resolvers": "^2.8.5",
     "add": "^2.0.6",
     "apollo-hooks": "*",
-    "next": "12.1.4",
+    "next": "^12.1.6",
     "next-auth": "^4.1.2",
     "react": "18.1.0",
     "react-dom": "17.0.2",
