--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,9 +13,9 @@
     "@hookform/resolvers": "^2.8.5",
     "add": "^2.0.6",
     "apollo-hooks": "*",
-    "next": "^12.1.6",
+    "next": "12.1.4",
     "next-auth": "^4.1.2",
-    "react": "18.1.0",
+    "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.26.0",
     "ui": "*",
@@ -23,7 +23,7 @@
     "yup": "^0.32.11"
   },
   "devDependencies": {
-    "@types/react": "18.0.12",
+    "@types/react": "17.0.39",
     "config": "*",
     "eslint": "8.10.0",
     "next-transpile-modules": "9.0.0",
