--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -17,10 +17,10 @@
     "cloudinary-build-url": "^0.2.4",
     "deepmerge": "^4.2.2",
     "lodash-es": "^4.17.21",
-    "next": "^12.1.6",
+    "next": "12.1.4",
     "next-auth": "^4.1.0",
     "next-seo": "^5.1.0",
-    "react": "18.1.0",
+    "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.5.3",
     "react-hook-form": "^7.26.0",
@@ -31,7 +31,7 @@
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
     "@svgr/webpack": "^6.2.1",
-    "@types/react": "^18.0.12",
+    "@types/react": "17.0.39",
     "config": "*",
     "eslint": "8.10.0",
     "next-transpile-modules": "9.0.0",
