--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -4,8 +4,7 @@
   "private": true,
   "scripts": {
     "test": "jest --detectOpenHandles",
-    "dev:backend": "nodemon --exec \"node -r esbuild-register ./src/main.ts\" -e .ts",
-    "dev": "ts-node-dev --transpile-only --no-notify ./src/main.ts",
+    "dev": "nodemon --exec \"node -r esbuild-register ./src/main.ts\" -e .ts",
     "start": "node ./dist/main.js",
     "build": "tsc",
     "lint": "tsc --noEmit && TIMING=1 eslint src --fix",
