--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -25,6 +25,7 @@
     "eslint": "^8.10.0",
     "jest": "^29.1.2",
     "nodemon": "^2.0.16",
+    "prisma": "^4.5.0",
     "scripts": "*",
     "supertest": "^6.1.3",
     "ts-node-dev": "^1.1.8",
@@ -35,20 +36,19 @@
     "preset": "scripts/jest/node"
   },
   "dependencies": {
-    "@prisma/client": "^3.11.1",
+    "@pothos/core": "^3.22.8",
+    "@pothos/plugin-prisma": "^3.35.6",
+    "@prisma/client": "^4.5.0",
     "apollo-server-express": "^3.6.7",
     "body-parser": "^1.19.2",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
-    "graphql": "^16.3.0",
+    "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
     "jsonwebtoken": "^8.5.1",
     "logger": "*",
-    "morgan": "^1.10.0",
-    "nexus": "^1.1.0",
-    "nexus-prisma": "^0.35.0",
-    "prisma": "^3.11.1"
+    "morgan": "^1.10.0"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
