--- a/apps/api/tsconfig.json
+++ b/apps/api/tsconfig.json
@@ -18,7 +18,12 @@
     "noUnusedParameters": false,
     "preserveWatchOutput": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": true,
+    "baseUrl": ".",
+    "paths": {
+      "@/helpers/*": ["src/helpers/*"],
+      "@/src/*": ["src/*"]
+    }
   },
   "exclude": ["node_modules"],
   "include": ["src"]
