feat(floating-UI): Add floating UI library for nav bar dropdown

--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
+    "@floating-ui/react-dom": "^1.0.0",
     "@hookform/resolvers": "^2.8.5",
     "@stitches/react": "^1.2.8",
     "apollo-hooks": "*",
