--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -27,6 +27,7 @@
     "config": "*",
     "eslint": "8.10.0",
     "next-transpile-modules": "9.0.0",
+    "plop": "^3.1.1",
     "tsconfig": "*",
     "typescript": "^4.5.3"
   }
