--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -36,6 +36,7 @@
     "preset": "scripts/jest/node"
   },
   "dependencies": {
+    "@floating-ui/react-dom-interactions": "^0.10.3",
     "@stitches/react": "^1.2.8",
     "classnames": "^2.3.1",
     "react-modal": "^3.15.1",
