--- a/package.json
+++ b/package.json
@@ -8,18 +8,20 @@
   ],
   "scripts": {
     "build": "turbo run build",
-    "build:web": "turbo run build --scope=web",
+    "build:web": "turbo run build --filter=web",
     "tsc:web": "cd apps/web && yarn tsc",
     "tsc:admin": "cd apps/admin && yarn tsc",
     "tsc:api": "cd apps/api && yarn generate && yarn tsc",
-    "build:hooks": "cd packages/apollo-hooks && yarn build",
-    "generate:hooks": "cd packages/apollo-hooks && yarn generate",
+    "build:hooks": "turbo run build --filter=apollo-hooks",
+    "generate:hooks": "turbo run generate --filter=apollo-hooks",
+    "generate:prisma": "turbo run generate --filter=api",
+    "migrate": "turbo run migrate:dev --filter=api",
     "update:hooks": "yarn generate:hooks && yarn build:hooks",
     "dev": "turbo run dev --parallel",
-    "dev:web": "turbo run dev --scope=!admin",
-    "dev:admin": "turbo run dev --scope=!web",
-    "dev:api": "turbo run dev --scope=api",
-    "dev:ui": "turbo run dev --scope=ui",
+    "dev:web": "turbo run dev --parallel --filter=!admin",
+    "dev:admin": "turbo run dev --parallel --filter=!web",
+    "dev:api": "turbo run dev --filter=api",
+    "dev:ui": "turbo run dev --filter=ui",
     "lint": "turbo run lint",
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
