--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,6 +40,7 @@
     "@pothos/plugin-prisma": "^3.35.8",
     "@prisma/client": "^4.5.0",
     "apollo-server-express": "^3.6.7",
+    "axios": "^1.2.0",
     "body-parser": "^1.19.2",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
@@ -48,8 +49,7 @@
     "graphql-scalars": "^1.18.0",
     "jsonwebtoken": "^8.5.1",
     "logger": "*",
-    "morgan": "^1.10.0",
-    "node-fetch": "^3.3.0"
+    "morgan": "^1.10.0"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma"
