--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -40,11 +40,11 @@
     "@pothos/plugin-prisma": "^3.35.8",
     "@prisma/client": "^4.5.0",
     "apollo-server-express": "^3.6.7",
-    "axios": "^1.2.0",
     "body-parser": "^1.19.2",
     "cloudinary": "^1.28.1",
     "cors": "^2.8.5",
     "express": "^4.18.1",
+    "got": "11.8.3",
     "graphql": "^16.6.0",
     "graphql-scalars": "^1.18.0",
     "jsonwebtoken": "^8.5.1",
