--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -24,6 +24,7 @@
     "react-dom": "17.0.2",
     "react-dropzone": "^11.5.3",
     "react-hook-form": "^7.38.0",
+    "react-hot-toast": "^2.4.0",
     "react-waypoint": "^10.1.0",
     "ui": "*",
     "yup": "^0.32.11"
