--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -39,6 +39,7 @@
     "@floating-ui/react-dom-interactions": "^0.10.3",
     "@stitches/react": "^1.2.8",
     "classnames": "^2.3.1",
+    "react-hot-toast": "^2.4.0",
     "react-modal": "^3.15.1",
     "react-select": "^5.2.2"
   }
