fix: add migration to fly.toml file

--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -8,6 +8,9 @@ processes = []
 
 [env]
 
+[deploy]
+  release_command = "npx prisma migrate deploy"
+
 [experimental]
   allowed_public_ports = []
   auto_rollback = true
