--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -21,14 +21,12 @@
     "@types/jsonwebtoken": "^8.5.8",
     "@types/morgan": "^1.9.2",
     "@types/node": "^17.0.15",
-    "@types/supertest": "^2.0.11",
     "esbuild-register": "^3.3.2",
     "eslint": "^8.10.0",
     "jest": "^29.1.2",
     "nodemon": "^2.0.16",
     "prisma": "^4.5.0",
     "scripts": "*",
-    "supertest": "^6.1.3",
     "ts-node-dev": "^1.1.8",
     "tsconfig": "*",
     "typescript": "^4.5.3"
@@ -39,7 +37,7 @@
   "dependencies": {
     "@pothos/core": "^3.22.8",
     "@pothos/plugin-prisma": "^3.35.8",
-    "@prisma/client": "^4.5.0",
+    "@prisma/client": "4.5.0",
     "apollo-server-express": "^3.6.7",
     "body-parser": "^1.19.2",
     "cloudinary": "^1.28.1",
@@ -50,7 +48,8 @@
     "graphql-scalars": "^1.18.0",
     "jsonwebtoken": "^8.5.1",
     "logger": "*",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "prisma": "4.5.0"
   },
   "prisma": {
     "schema": "src/prisma/schema.prisma",
