--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
     "@apollo/client": "^3.6.6",
     "@hookform/resolvers": "^2.8.5",
     "@stitches/react": "^1.2.8",
+    "@vanilla-extract/css": "^1.9.2",
     "apollo-hooks": "*",
     "deepmerge": "^4.2.2",
     "lodash-es": "^4.17.21",
@@ -32,6 +33,7 @@
     "@cld-apis/types": "^0.1.6",
     "@svgr/webpack": "^6.5.1",
     "@types/react": "17.0.39",
+    "@vanilla-extract/next-plugin": "^2.1.1",
     "config": "*",
     "eslint": "8.10.0",
     "next-transpile-modules": "9.0.0",
