--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@hookform/resolvers": "^2.8.5",
+    "@vanilla-extract/css": "^1.9.2",
     "add": "^2.0.6",
     "apollo-hooks": "*",
     "next": "12.3.0",
@@ -24,6 +25,7 @@
   },
   "devDependencies": {
     "@types/react": "17.0.39",
+    "@vanilla-extract/next-plugin": "^2.1.1",
     "config": "*",
     "eslint": "8.10.0",
     "next-transpile-modules": "9.0.0",
