--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -5,7 +5,7 @@
   "Display": "Vite",
   "compilerOptions": {
     "allowJs": false,
-    "esModuleInterop": false,
+    "allowSyntheticDefaultImports": true,
     "jsx": "react",
     "lib": ["dom", "dom.iterable", "esnext"],
     "module": "ESNext",
