chore: remove vite client

--- a/packages/ui/tsconfig.json
+++ b/packages/ui/tsconfig.json
@@ -12,7 +12,6 @@
     "noEmit": true,
     "resolveJsonModule": true,
     "skipLibCheck": false,
-    "target": "ESNext",
-    "types": ["vite/client"]
+    "target": "ESNext"
   }
 }
