--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -12,7 +12,7 @@
   "scripts": {
     "build": "tsup",
     "clean": "rm -rf .turbo && rm -rf node_modules && rm -rf dist",
-    "dev": "vite",
+    "dev": "tsup --watch",
     "lint": "tsc --noEmit && TIMING=1 eslint \"src/**/*.ts*\"",
     "generate": "plop"
   },
