--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -23,6 +23,7 @@
     "@types/react-modal": "^3.13.1",
     "@vanilla-extract/esbuild-plugin": "^2.2.0",
     "esbuild": "^0.16.12",
+    "esbuild-plugin-svgr": "^1.0.1",
     "eslint": "^8.10.0",
     "jest": "^29.1.2",
     "plop": "^3.1.0",
