--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -23,6 +23,7 @@
     "next-i18next": "^13.0.2",
     "next-seo": "^5.1.0",
     "react": "17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.5.3",
     "react-hook-form": "^7.38.0",
