--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -16,15 +16,19 @@
     "apollo-hooks": "*",
     "classnames": "^2.3.2",
     "deepmerge": "^4.2.2",
+    "i18next": "^22.4.6",
     "lodash-es": "^4.17.21",
     "next": "12.3.0",
     "next-auth": "^4.7.0",
+    "next-i18next": "^13.0.2",
     "next-seo": "^5.1.0",
     "react": "17.0.2",
+    "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.5.3",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
+    "react-i18next": "^12.1.1",
     "react-waypoint": "^10.3.0",
     "ui": "*",
     "yup": "^0.32.11"
