--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -22,6 +22,7 @@
     "next-auth": "^4.7.0",
     "next-i18next": "^13.0.2",
     "next-seo": "^5.1.0",
+    "next-sitemap": "^3.1.45",
     "react": "17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
