--- a/apps/api/fly.toml
+++ b/apps/api/fly.toml
@@ -9,7 +9,7 @@ processes = []
 [env]
 
 [deploy]
-  release_command = "npx prisma migrate deploy"
+  release_command = "npx prisma generate"
 
 [experimental]
   allowed_public_ports = []
