--- a/packages/config/package.json
+++ b/packages/config/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "files": [
     "eslint-preset.js",
-    "prettier-preset.js"
+    "prettier-preset.js",
+    "tailwind.config.js"
   ],
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^5.21.0",
@@ -13,5 +14,9 @@
     "eslint-config-prettier": "^8.5.0",
     "prettier": "2.8.0"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4"
+  }
 }
