--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -26,10 +26,13 @@
   "devDependencies": {
     "@types/react": "17.0.39",
     "@vanilla-extract/next-plugin": "^2.1.1",
+    "autoprefixer": "^10.4.13",
     "config": "*",
     "eslint": "8.10.0",
     "next-transpile-modules": "9.0.0",
     "plop": "^3.1.1",
+    "postcss": "^8.4.21",
+    "tailwindcss": "^3.2.4",
     "tsconfig": "*",
     "typescript": "^4.9.3"
   }
