--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -22,6 +22,7 @@
     "@types/react-dom": "^17.0.8",
     "autoprefixer": "^10.4.13",
     "esbuild": "^0.16.12",
+    "esbuild-plugin-svgr": "^1.0.1",
     "eslint": "^8.10.0",
     "jest": "^29.1.2",
     "plop": "^3.1.0",
