--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -32,6 +32,7 @@
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
     "react-waypoint": "^10.3.0",
+    "redaxios": "^0.5.1",
     "ui": "*",
     "yup": "^0.32.11"
   },
