--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@hookform/resolvers": "^2.8.5",
+    "@mantine/hooks": "^5.10.3",
     "@vanilla-extract/css": "^1.9.2",
     "apollo-hooks": "*",
     "classnames": "^2.3.2",
