--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -14,8 +14,10 @@
     "@vanilla-extract/css": "^1.9.2",
     "add": "^2.0.6",
     "apollo-hooks": "*",
+    "classnames": "^2.3.2",
     "next": "12.3.0",
     "next-auth": "^4.7.0",
+    "next-seo": "^5.15.0",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-hook-form": "^7.38.0",
