absoulte path for public images

--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -11,7 +11,8 @@
       "@/pages/*": ["src/pages/*"],
       "@/graphql/*": ["src/graphql/*"],
       "@/store/*": ["store/*"],
-      "@/types/*": ["src/types/*"]
+      "@/types/*": ["src/types/*"],
+      "@/public/*": ["public/*"]
     }
   }
 }
