--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -14,6 +14,7 @@
     "@apollo/client": "^3.6.6",
     "@hookform/resolvers": "^2.8.5",
     "@mantine/hooks": "^5.10.3",
+    "@vercel/analytics": "^1.0.0",
     "apollo-hooks": "*",
     "classnames": "^2.3.2",
     "deepmerge": "^4.2.2",
