--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -28,6 +28,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
     "react-dropzone": "^11.5.3",
+    "react-easy-crop": "^4.7.4",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
