--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "next-i18next": "^13.0.2",
     "next-seo": "^5.1.0",
     "next-sitemap": "^4.0.7",
+    "nextjs-progressbar": "^0.0.16",
     "react": "17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
@@ -35,7 +36,8 @@
     "react-waypoint": "^10.3.0",
     "redaxios": "^0.5.1",
     "ui": "*",
-    "yup": "^0.32.11"
+    "yup": "^0.32.11",
+    "zustand": "^4.3.7"
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
