--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -47,6 +47,7 @@
     "next-transpile-modules": "9.0.0",
     "plop": "^3.1.0",
     "postcss": "^8.4.21",
+    "prettier-plugin-tailwindcss": "^0.2.8",
     "tailwindcss": "^3.2.4",
     "tsconfig": "*",
     "typescript": "^4.9.3"
