--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -25,6 +25,7 @@
     "next-i18next": "^13.0.2",
     "next-seo": "^5.1.0",
     "next-sitemap": "^4.0.7",
+    "nextjs-progressbar": "^0.0.16",
     "react": "17.0.2",
     "react-cookies": "^0.1.1",
     "react-dom": "17.0.2",
