--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,6 +16,7 @@
     "@vanilla-extract/css": "^1.9.2",
     "apollo-hooks": "*",
     "classnames": "^2.3.2",
+    "lodash-es": "^4.17.21",
     "next": "12.3.0",
     "next-auth": "^4.20.1",
     "next-seo": "^5.15.0",
@@ -29,6 +30,7 @@
     "ui": "*"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.194",
     "@types/react": "18.2.0",
     "@vanilla-extract/next-plugin": "^2.1.1",
     "autoprefixer": "^10.4.13",
