--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -41,6 +41,7 @@
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
     "@svgr/webpack": "^7.0.0",
+    "@types/lodash": "^4.14.194",
     "@types/react": "18.2.0",
     "autoprefixer": "^10.4.13",
     "config": "*",
