--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -16,6 +16,7 @@
     "@vanilla-extract/css": "^1.9.2",
     "apollo-hooks": "*",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
     "lodash-es": "^4.17.21",
     "next": "12.3.0",
     "next-auth": "^4.20.1",
