--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -30,6 +30,7 @@
     "react-cookies": "^0.1.1",
     "react-dom": "18.2.0",
     "react-dropzone": "^11.5.3",
+    "react-easy-crop": "^5.0.0",
     "react-hook-form": "^7.38.0",
     "react-hot-toast": "^2.4.0",
     "react-i18next": "^12.1.1",
