--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -13,12 +13,14 @@
   "dependencies": {
     "@apollo/client": "^3.6.6",
     "@hookform/resolvers": "^2.8.5",
+    "@lexical/react": "^0.11.1",
     "@mantine/hooks": "^5.10.3",
     "@vercel/analytics": "^1.0.0",
     "apollo-hooks": "*",
     "classnames": "^2.3.2",
     "deepmerge": "^4.2.2",
     "i18next": "^22.4.15",
+    "lexical": "^0.11.1",
     "lodash-es": "^4.17.21",
     "next": "12.3.0",
     "next-auth": "^4.20.1",
