--- a/packages/ui/package.json
+++ b/packages/ui/package.json
@@ -37,6 +37,7 @@
     "preset": "scripts/jest/node"
   },
   "dependencies": {
+    "@floating-ui/react": "^0.24.6",
     "@floating-ui/react-dom-interactions": "^0.13.3",
     "@headlessui/react": "^1.7.13",
     "classnames": "^2.3.1",
