--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,12 @@ build/**
 dist
 
 tsconfig.tsbuildinfo
+
+
+# playwright
+
+node_modules/
+test-results/
+playwright-report/
+playwright/.cache/
+playwright/videos/
