--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -40,6 +40,7 @@
   },
   "devDependencies": {
     "@cld-apis/types": "^0.1.6",
+    "@playwright/test": "^1.36.1",
     "@svgr/webpack": "^7.0.0",
     "@types/lodash": "^4.14.194",
     "@types/react": "18.2.0",
