--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -8,7 +8,8 @@
     "start": "next start",
     "lint": "next lint",
     "generate": "plop",
-    "postbuild": "next-sitemap"
+    "postbuild": "next-sitemap",
+    "playwright": "playwright test"
   },
   "dependencies": {
     "@apollo/client": "^3.6.6",
