fix: add npx playwright install to workflow

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -39,8 +39,8 @@ jobs:
         run: yarn
       - name: Connect to PostgreSQL
         run: cd apps/api && npx prisma generate && npx prisma migrate reset --force
-        # Environment variables used by the `client.js` script to create a new PostgreSQL table.
-
+      - name: Install Playwright Browsers
+        run: npx playwright install --with-deps
       - name: Run Playwright tests
         run: cd apps/web && yarn playwright test
       - uses: actions/upload-artifact@v3
