chore: yaml file tweaks

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -1,30 +1,25 @@
 name: Playwright Tests
 on:
   push:
-    branches: [main, master]
+    branches: [main]
   pull_request:
-    branches: [main, master]
+    branches: [main]
 jobs:
   test:
     timeout-minutes: 60
     runs-on: ubuntu-latest
     services:
-      # Label used to access the service container
       postgres:
-        # Docker Hub image
         image: postgres
-        # Provide the password for postgres
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
-        # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
           --health-timeout 5s
           --health-retries 5
         ports:
-          # Maps tcp port 5432 on service container to the host
           - 5432:5432
     env:
       DATABASE_URL: postgresql://postgres:postgres@localhost:5432/project-shelf?connection_limit=5&pool_timeout=0
@@ -42,7 +37,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: cd apps/web && yarn playwright test
+        run: cd apps/web && yarn playwright:web
       - uses: actions/upload-artifact@v3
         if: always()
         with:
