fix: playwright commant

--- a/.github/workflows/playwright.yml
+++ b/.github/workflows/playwright.yml
@@ -37,7 +37,7 @@ jobs:
       - name: Install Playwright Browsers
         run: npx playwright install --with-deps
       - name: Run Playwright tests
-        run: cd apps/web && yarn playwright:web
+        run: yarn playwright:web
       - uses: actions/upload-artifact@v3
         if: always()
         with:
