--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -49,7 +49,8 @@
     "next-transpile-modules": "9.0.0",
     "plop": "^3.1.0",
     "postcss": "^8.4.27",
-    "prettier-plugin-tailwindcss": "^0.4.1",
+    "prettier": "^3.1.0",
+    "prettier-plugin-tailwindcss": "^0.5.7",
     "tailwindcss": "^3.2.4",
     "tsconfig": "*",
     "typescript": "^4.9.3"
